updated the overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,11 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @layer utilities {
-    .clip-left {
-        clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
-    }
-
     .clip-right {
         clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
     }
 
     @media (min-width: 768px) {
-        .clip-left {
-            clip-path: polygon(0 0, 85% 0, 100% 100%, 0% 100%);
-        }
-
         .clip-right {
             clip-path: polygon(0 0, 100% 0, 100% 100%, 5% 100%);
         }
